# Project_huffman

./: CMakeLists.txt  README.md
.github/workflows/: build-and-lint.yml  compareTests.yml
src/: huffman.c  huffman.h  main.c
tests/: test3.txt  test4.txt  test5.txt  testHuffman.c
